# telepager

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: aiogram_example.py  base.py  custom_example.py  filtered.py  telegrinder_example.py
telepager/: __init__.py  _compat.py  custom.py  design.py  flag.py  i18n.py  manager.py  page_sizer.py  paginator.py  settings.py  storage.py  structs.py
