[tool.poetry]
name = "telepager"
version = "0.1.0"
description = "A fancy paginator for your Telegram bots"
authors = ["prostomarkeloff"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
