[tool.poetry]
name = "telepager"
version = "1.1.0"
description = "A fancy paginator for your Telegram bots"
authors = ["prostomarkeloff"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telegrinder = { git = "https://github.com/timoniq/telegrinder", rev = "b796d39" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
